Fixed clipping of answers

--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@ body
     width: 265px;
     height: 75px;
     border-radius: 10px;
-    padding: 10px;
+    padding: 15px;
     margin: 10px 2px;
     font-size: 30px;
     font-weight: bold;
